5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3858/executions/1595_2895.log
== TEST (2019-03-28 21:23:20) 
-- CODE:
qjogos = float(input("Insira a quantidade de jogos"))
vlrjogo = float(input("valor de cada jogo"))
vlsfrete = float(input("valor frete"))

total = qjogos * vlrjogos + vlrfrete
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = qjogos * vlrjogos + vlrfrete
NameError: name 'vlrjogos' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 21:23:27) 
-- CODE:
qjogos = float(input("Insira a quantidade de jogos"))
vlrjogo = float(input("valor de cada jogo"))
vlsfrete = float(input("valor frete"))

total = qjogos * vlrjogos + vlrfrete
print(total)
-- EXECUTION TIME:
0.147994
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/2895/main.py", line 5, in <module>
    total = qjogos * vlrjogos + vlrfrete
NameError: name 'vlrjogos' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 21:23:54) 
-- CODE:
qjogos = float(input("Insira a quantidade de jogos"))
vlrjogo = float(input("valor de cada jogo"))
vlsfrete = float(input("valor frete"))

total = (qjogos * vlrjogos) + vlrfrete
print(total)
-- EXECUTION TIME:
0.128027
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/2895/main.py", line 5, in <module>
    total = (qjogos * vlrjogos) + vlrfrete
NameError: name 'vlrjogos' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 21:24:00) 
-- CODE:
qjogos = float(input("Insira a quantidade de jogos"))
vlrjogo = float(input("valor de cada jogo"))
vlsfrete = float(input("valor frete"))

total = (qjogos * vlrjogos) + vlrfrete
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = (qjogos * vlrjogos) + vlrfrete
NameError: name 'vlrjogos' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 21:24:26) 
-- CODE:
qjogos = float(input("Insira a quantidade de jogos"))
vlrjogo = float(input("valor de cada jogo"))
vlsfrete = float(input("valor frete"))

total = (qjogos * vlrjogo) + vlrfrete
print(total)
-- EXECUTION TIME:
0.15579
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/2895/main.py", line 5, in <module>
    total = (qjogos * vlrjogo) + vlrfrete
NameError: name 'vlrfrete' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 21:24:29) 
-- CODE:
qjogos = float(input("Insira a quantidade de jogos"))
vlrjogo = float(input("valor de cada jogo"))
vlsfrete = float(input("valor frete"))

total = (qjogos * vlrjogo) + vlrfrete
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = (qjogos * vlrjogo) + vlrfrete
NameError: name 'vlrfrete' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 21:24:53) 
-- CODE:
qjogos = float(input("Insira a quantidade de jogos"))
vlrjogo = float(input("valor de cada jogo"))
vlrfrete = float(input("valor frete"))

total = (qjogos * vlrjogo) + vlrfrete
print(total)
-- EXECUTION TIME:
0.139086
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
